# Echo-Lingo

./: .gitignore  CLAUDE.md  README.md  start-all.sh
backend/: .cursorrules  .env.example  .gitignore  README.md  create_favicon.py  hume_test.py  pyproject.toml  run.py  start.sh  transcription.txt
backend/src/: app.py
backend/src/api/models/: __init__.py  audio.py
backend/src/api/routes/: __init__.py  audio.py  root.py
backend/src/core/: config.py  logging.py
backend/src/services/: text_to_speech.py  transcription.py  translation.py
backend/src/services/providers/: __init__.py  base.py  factory.py  openai_provider.py  sambanova_provider.py
backend/src/services/voice_providers/: __init__.py  base.py  elevenlabs_provider.py  factory.py  hume_provider.py
backend/src/utils/: file_utils.py
backend/tests/: __init__.py  conftest.py
backend/tests/integration/: __init__.py  test_audio_routes.py
demo/: demo.mov
mobile/: InternalBytecode.js  README.md  app.json  metro.config.js  package.json  pnpm-lock.yaml  start.sh
mobile/app/: +not-found.tsx  _layout.tsx  index.tsx
mobile/app/(tabs)/: _layout.tsx  haptics_import.ts  history.tsx  index.tsx  profile.tsx
mobile/app/components/: LanguageSelector.tsx  VoiceProviderSelector.tsx
mobile/types/: languages.ts
