[project]
name = "eleven-lab-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "elevenlabs>=1.51.0",
    "fastapi[standard]>=0.115.8",
    "logging>=0.4.9.6",
    "openai>=1.64.0",
    "pip>=25.0.1",
    "pydantic-settings>=2.2.1",
    "python-dotenv>=1.0.1",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.5",
    "ruff>=0.9.7",
    "tool>=0.8.0",
    "uvicorn>=0.34.0",
    "pydub>=0.25.1",
    "pyaudio>=0.2.14",
    "hume>=0.11.7",
    "vapi-server-sdk>=1.7.2",
]

[tool.ruff]
line-length = 120
target-version = "py313"
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "logs",
    "temp",
]

[tool.ruff.lint]
extend-select = ["W291"]
select = ["E", "F", "I", "W"]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
filterwarnings = [
    "ignore::DeprecationWarning:pydub.*:",
    "ignore::DeprecationWarning:pydantic.*:"
]
